kubernates/ncp/ssl-ingress-controller/ssl-service-host-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80},{"HTTPS":443}]'
    alb.ingress.kubernetes.io/ssl-certificate-no: "36608"
    alb.ingress.kubernetes.io/ssl-redirect: "443"
  name: host-ingress
spec:
  ingressClassName: alb
  rules:
  - host: www.developermoon.site
    http:
      paths:
      - path: /*
        pathType: Prefix
        backend:
          service:
            name: naver
            port:
              number: 80
  - host: api.developermoon.site
    http:
      paths:
      - path: /*
        pathType: Prefix
        backend:
          service:
            name: cloud
            port:
              number: 80
